<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|fill_vertical"
    tools:context=".views.ProductDeatailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/product_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/product_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/product_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_product_name"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/product_quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/product_quantity"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_qantitiy"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="@string/add" />


            <EditText
                android:id="@+id/product_quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberDecimal"
                android:text="@string/defuat_product_quantity"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_minus_qantitiy"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/product_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/product_price"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/product_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/enter_product_price"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/supplier_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/supplier_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/supplier_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_supplier_name"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/supplier_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/supplier_email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/supplier_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email_address"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/supplier_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/supplier_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/supplier_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/enter_supplier_number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="invisible"
            android:gravity="bottom|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_order_by_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/colorAccent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/order_by_email"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/btn_order_by_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/colorAccent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@android:drawable/ic_menu_call"
                    android:text="@string/order_by_number"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="#ed5e5e"
                android:text="@string/delete"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>