<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="10dp"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Product Name" />

    <TextView
        android:id="@+id/supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        tools:text="supplier name" />

    <TextView
        android:id="@+id/quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/supplier_name"
        android:layout_alignStart="@+id/supplier_name"
        android:layout_below="@+id/supplier_name"
        android:layout_marginTop="11dp"
        android:text="@string/quantity"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quantity_title"
        android:layout_toRightOf="@id/quantity_title"
        android:layout_toEndOf="@id/quantity_title"
        android:layout_marginLeft="5dp"
        tools:text="20" />

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quantity_title"
        android:layout_alignStart="@+id/quantity_title"
        android:layout_below="@+id/quantity_value"
        android:layout_marginTop="11dp"
        android:text="@string/price"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/price_title"
        android:layout_below="@+id/quantity_value"
        android:layout_toRightOf="@id/price_title"
        android:layout_toEndOf="@id/price_title"
        android:layout_marginLeft="5dp"
        tools:text="100$" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_gift" />

    <Button
        android:id="@+id/sale_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:text="@string/sale" />

</RelativeLayout>

